--- a/theater/templates/theater/nowshowing.html
+++ b/theater/templates/theater/nowshowing.html
@@ -61,11 +61,11 @@
 
 <div class="imagecontainer">       
     <div class="polaroid">
-      <a href="{% url 'Wonka' %}"><img src="{% static 'Wonka.jpg' %}" alt="5 Terre" style="width:100%"></a>
+      <a href="{% url 'Wonka' %}"><img src="/media/Wonka.jpg" alt="5 Terre" style="width:100%"></a>
     </div>
     
     <div class="polaroid">
-      <a href="{% url 'Spiderman' %}"><img src="{% static 'Spider Man.jpg' %}" alt="5 Terre" style="width:100%"></a>
+      <a href="{% url 'Spiderman' %}"><img src="/media/ Man.jpg" alt="5 Terre" style="width:100%"></a>
     </div>
         
     <div class="polaroid">
