--- a/theater/templates/theater/nowshowing.html
+++ b/theater/templates/theater/nowshowing.html
@@ -65,15 +65,15 @@
     </div>
     
     <div class="polaroid">
-      <a href="{% url 'Spiderman' %}"><img src="/media/ Man.jpg" alt="5 Terre" style="width:100%"></a>
+      <a href="{% url 'Spiderman' %}"><img src="/media/Spider Man.jpg" alt="5 Terre" style="width:100%"></a>
     </div>
         
     <div class="polaroid">
-      <a href="{% url 'oppenheimer' %}"><img src="{% static 'oppenheimer.jpg' %}" alt="5 Terre" style="width:100%"></a>
+      <a href="{% url 'oppenheimer' %}"><img src="/media/oppenheimer.jpg" alt="5 Terre" style="width:100%"></a>
     </div>
         
     <div class="polaroid">
-      <a href="{% url 'Trolls' %}"><img src="{% static 'Trolls.jpg' %}" alt="5 Terre" style="width:100%"></a>
+      <a href="{% url 'Trolls' %}"><img src="/media/Trolls.jpg" alt="5 Terre" style="width:100%"></a>
     </div>
    
 </div>
