--- a/theater/templates/theater/oppenheimer.html
+++ b/theater/templates/theater/oppenheimer.html
@@ -6,7 +6,7 @@
 
 <div class="imagecontainer">   
     <div class="polaroid">
-      <img src="{% static 'oppenheimer.jpg' %}" alt="5 Terre" style="width:100%">
+        <img src="/media/oppenheimer.jpg" alt="5 Terre" style="width:100%">
     </div>
     <div class="container">
         <p>Google users
@@ -17,7 +17,7 @@
             Nominations: Bandung Film Festival for Imported Film
             Budget: 100 million USD
             Casting director: John Papsidera</p>
-            <img src="{% static 'IMDB.jpeg' %}" style="width:50px"> <strong> 8.4/10
+            <img src="/media/IMDB.jpeg" style="width:50px"> <strong> 8.4/10
     </div>
 </div>
 <div class="imagecontainer">
