--- a/theater/templates/theater/Trolls.html
+++ b/theater/templates/theater/Trolls.html
@@ -5,7 +5,7 @@
 
 <div class="imagecontainer">   
     <div class="polaroid">
-      <img src="{% static 'Trolls.jpg' %}" alt="5 Terre" style="width:100%">
+      <img src="/media/Trolls.jpg" alt="5 Terre" style="width:100%">
     </div>
     <div class="container">
         <p>Google users
@@ -15,7 +15,7 @@
             Distributed by: Universal Pictures
             Based on: Good Luck Trolls; by Thomas Dam
             Box office: $173.8 million </p>
-            <img src="{% static 'IMDB.jpeg' %}" style="width:50px"> <strong> 6.0/10
+            <img src="/media/IMDB.jpeg" style="width:50px"> <strong> 6.0/10
     </div>
 </div>
 <div class="imagecontainer">
