--- a/theater/templates/theater/Wonka.html
+++ b/theater/templates/theater/Wonka.html
@@ -5,7 +5,7 @@
 
 <div class="imagecontainer">   
     <div class="polaroid">
-      <img src="{% static 'Wonka.jpg' %}" alt="5 Terre" style="width:100%">
+      <img src="/media/Wonka.jpg" alt="5 Terre" style="width:100%">
     </div>
     <div class="container">
         <p>Armed with nothing but a hatful of dreams, young chocolatier Willy Wonka manages to change the world, one delectable bite at a time.
@@ -16,8 +16,7 @@
             Screenplay: Paul King, Simon Farnaby
             Production companies: Heyday Films, Village Roadshow Pictures, Warner Bros.
             Cinematography: Chung-hoon Chung.</p>
-
-            <img src="{% static 'IMDB.jpeg' %}" style="width:50px"> <strong> 7.5/10
+            <img src="/media/IMDB.jpeg" style="width:50px"> <strong> 7.5/10
     </div>
 </div>
 <div class="imagecontainer">
