--- a/theater/templates/theater/Spiderman.html
+++ b/theater/templates/theater/Spiderman.html
@@ -5,7 +5,7 @@
 
 <div class="imagecontainer">   
     <div class="polaroid">
-      <img src="{% static 'Spider Man.jpg' %}" alt="5 Terre" style="width:100%">
+      <img src="/media/Spider Man.jpg" alt="5 Terre" style="width:100%">
     </div>
     <div class="container">
         <p>In an attempt to curb the Spot, a scientist, from harnessing the power of the multiverse, Miles Morales joins forces with Gwen Stacy.
@@ -14,7 +14,7 @@
             Sequel: Spider-Man: Beyond the Spider-Verse
             Box office: 690.5 million USD
             Distributed by: Sony Pictures Entertainment Motion Picture Group, Sony Pictures Releasing</p>
-            <img src="{% static 'IMDB.jpeg' %}" style="width:50px"> <strong> 8.7/10
+            <img src="/media/IMDB.jpeg" style="width:50px"> <strong> 8.7/10
     </div>
 </div>
 <div class="imagecontainer">
