--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -3,10 +3,14 @@
 {% block content %}
 <div class="content-section col-md-8">
     <h3>You have been logged out</h3>
+    <form method="post" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-primary mt-3">Log Out</button>
+    </form>
     <div class="border-top-pt-3">
         <small class="text-muted">
             <a class="ml-2" href="{% url 'login' %}">Log In Again</a>
         </small>   
     </div>
-</div>          
+</div>
 {% endblock content %}
