--- a/theater/templates/theater/base.html
+++ b/theater/templates/theater/base.html
@@ -146,7 +146,7 @@
     <div class="sidenav">
         <a href="{% url 'theater-home' %}">Home</a>
         {% if user.is_authenticated %}
-            <a href="{% url 'profile' %}">Profile - {{user.username}}</a>
+            <a href="{% url 'profile' %}">Profile</a>
             <a href="{% url 'logout' %}">Logout</a>
             
         
