--- a/theater/templates/theater/Spiderman.html
+++ b/theater/templates/theater/Spiderman.html
@@ -68,13 +68,16 @@
             Directors: Joaquim Dos Santos, Justin K. Thompson, Kemp Powers
             Sequel: Spider-Man: Beyond the Spider-Verse
             Box office: 690.5 million USD
-            Distributed by: Sony Pictures Entertainment Motion Picture Group, Sony Pictures Releasing</p>
+            Distributed by: Sony Pictures Entertainment Motion Picture Group, Sony Pictures Releasing 
+        
+            Spiderman codepiple
+        </p>
             <img src="/media/IMDB.jpeg" style="width:50px"> <strong> 8.7/10
     </div>
 </div>
 <div class="imagecontainer">
     <iframe width="950" height="380"
-src="https://www.youtube.com/embed/shW9i6k8cB0?autoplay=1&mute=1">
+src="https://www.youtube.com/embed/cqGjhVJWtEg?autoplay=1&mute=">
 </iframe>
 </div>
            
